# wordnet-mcp-server

./: Makefile  README.md  __init__.py  add_to_cursor.py  app.py  cursor_integration.md  example.py  pyproject.toml  setup.py  test_app.py
tests/: __init__.py
